[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/areas/Area3D.gd" id="1"]

[node name="Area3D" type="Node3D"]
script = ExtResource("1")

[node name="VisualLayer" type="Node3D" parent="."]

[node name="TerrainMesh" type="MeshInstance3D" parent="VisualLayer"]

[node name="NPCContainer" type="Node3D" parent="."]

[node name="POIContainer" type="Node3D" parent="."]

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]

[node name="TransitionPoints" type="Node3D" parent="."]

[node name="Environment" type="Node3D" parent="."]

[node name="Lighting" type="Node3D" parent="Environment"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment/Lighting"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 50, 0)
light_energy = 1.0